--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --coverage",
+    "e2e": "cypress run"
   },
   "dependencies": {
     "@types/node": "18.16.3",
@@ -21,5 +23,13 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "cypress": "^13.1.0"
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom"
   }
 }
