--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
+    "eslint": "^8.50.0",  // Cập nhật eslint mới nhất
     "eslint-config-next": "13.3.4",
     "next": "13.3.4",
     "postcss": "8.4.23",
@@ -25,9 +25,11 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "cypress": "^13.1.0"
+    "jest": "^29.6.0",
+    "jest-environment-jsdom": "^29.6.0",
+    "cypress": "^13.2.0",
+    "rimraf": "^4.1.2",   // Thêm rimraf mới nhất
+    "glob": "^10.3.0"     // Thêm glob mới nhất
   },
   "jest": {
     "testEnvironment": "jest-environment-jsdom"
