--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
-    "eslint": "^8.50.0",  // Cập nhật eslint mới nhất
+    "eslint": "^8.50.0",
     "eslint-config-next": "13.3.4",
     "next": "13.3.4",
     "postcss": "8.4.23",
@@ -28,8 +28,8 @@
     "jest": "^29.6.0",
     "jest-environment-jsdom": "^29.6.0",
     "cypress": "^13.2.0",
-    "rimraf": "^4.1.2",   // Thêm rimraf mới nhất
-    "glob": "^10.3.0"     // Thêm glob mới nhất
+    "rimraf": "^4.1.2",
+    "glob": "^10.3.0"
   },
   "jest": {
     "testEnvironment": "jest-environment-jsdom"
